@@ -1,3 +1,8 @@
+2001-09-16  Bruno Haible  <haible@clisp.cons.org>
+
+	* x-c.c (phase4_getc): Rename local variable 'state' to
+	'last_was_star'.
+
 2001-09-11  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.am (COMMON_SOURCES, FORMAT_SOURCES): New variables.
